# chordizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
ChordTrackerPlugin/: CMakeLists.txt  README.md
ChordTrackerPlugin/Source/: AudioTranscriptionRefiner.cpp  AudioTranscriptionRefiner.h  ChordEngine.cpp  ChordEngine.h  MidiExport.cpp  MidiExport.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ChordTrackerPlugin/Tests/: ChordEngineTests.cpp  NeuralModelSmokeTest.cpp
ChordTrackerPlugin/Tests/Fixtures/: README.md
script/: build_chordizer.sh
